--- a/Site/css/carrinho.css
+++ b/Site/css/carrinho.css
@@ -35,6 +35,7 @@ header {
 
 nav {
   margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -297,184 +298,279 @@ div.tudinho div.app img.abb {
   height: 52px;
 }
 
-button {
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
+main {
+  margin: 0 auto;
+  width: 75%;
 }
 
-img.lista {
-  height: 30px;
-  width: 30px;
+div.titulol
+{
+  display:flex;
+  flex-direction: row;
+  width:210px;
+  justify-content: space-between;
+  margin-top: 15px;
 }
 
-h5.oi {
-  font-size: 20px;
-  margin-left: 15px;
+div.titulol img
+{
+  width: 35px;
+  height: 40px;
+  margin-top: 4px;
 }
 
-p.emaberto {
-  margin: 10px 0px 16px 100px;
+div.titulol p
+{
+  font-size: 25px;  
+  margin-top: 8px;
+  font-weight: 600;
 }
 
-div.inicio {
-  display: -webkit-box;
-  display: -ms-flexbox;
+div.englobar
+{
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 100px;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-div.pedido {
-  display: -webkit-box;
-  display: -ms-flexbox;
+div.lista
+{
   display: flex;
-  background-color: #e6e6e6;
-  width: 1291px;
-  height: 238px;
-  border-radius: 20px;
-  padding: 20px;
-  margin-left: 100px;
-  margin-bottom: 30px;
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
+  flex-direction: column;
+  width: auto;
+  justify-content: space-between;
 }
 
-div.pedido img.bolo {
-  width: 200px;
-  height: 150px;
-  margin-top: 55px;
+div.baixo
+{
+  display: flex;
+  background-color: white;
+  border-radius: 16px;
+  flex-direction: row;
   margin-left: 0px;
+  justify-content: space-between;
+  width:860px;
+  height:auto;
+  margin-bottom:20px;
 }
 
-div.pedido h3.titulo {
-  margin-left: 20px;
-  margin-top: 60px;
+p.boloTitulo
+{
+  margin-bottom:0px;
+  margin-top:30px;
+  font-size:27px;
+  font-weight: bold;
 }
 
-div.pedido div.iniciodois {
-  display: -webkit-box;
-  display: -ms-flexbox;
+p.boloLegenda
+{
+  margin-top:5px;
+}
+
+p.fino
+{
+  margin-top: 35px;
+  margin-bottom:0px;
+  font-size: 20px;
+}
+
+p.bold
+{
+  font-weight: bold;
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+img.bolo
+{
+  margin-left:-182px;
+  margin-right: 0px;
+}
+
+.qtd{
+  width: 180px;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: -205px;
+  flex-direction: row;
+  justify-content: space-between;
+
 }
 
-div.pedido img.caminhao {
-  width: 22px;
-  height: 16px;
+h4
+{
+  margin-bottom: 10px;
+  margin-left:30px;
 }
 
-div.pedido p.acaminho {
+input.qtd
+{
+  width: 50px;
+  height: 27px;
   margin-left: 5px;
-}
-
-div.pedido h3.preco {
-  margin-left: 170px;
-  margin-top: 100px;
-  font-size: 30px;
-}
-
-div.pedido div.botoes {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: 50px;
-  margin-top: 40px;
-}
-
-div.pedido button.um {
-  width: 282px;
-  height: 67px;
-  background-color: #0BBAB3;
-  margin-bottom: 20px;
-  border-radius: 25px;
+  margin-right: 5px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-radius: 10px;
   border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: white;
+  outline: none;
+  color: black;
+  font-family: 'Raleway', sans-serif;
+  background-color: #e6e6e6;
   font-size: 20px;
-  font-weight: bold;
 }
 
-div.pedido div.botao {
-  display: -webkit-box;
-  display: -ms-flexbox;
+button.bot
+  {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 90px;
-}
+  justify-content: center;
+  align-items: center;
 
-div.pedido button.dois {
-  width: 282px;
-  height: 67px;
-  border-radius: 25px;
+  width:40px;
+  height:27px;
+
+  background-color: #E6E6E6;
+  color:black;
+
+  border-radius: 8px;
   border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: #797979;
-  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 45px;
+ }
+
+ button.lixo
+ {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top:40px;
+  margin-right:30px;
+
+  width:40px;
+  height:40px;
+
+  background-color:#88002A;
+  color:black;
+
+  border-radius: 8px;
+  border-style: none;
+ }
+
+ div.total
+ {
+   background-color: white;
+   border-radius: 20px;
+   min-height: 150px;
+   width: 420px;
+   padding:20px;
+ }
+
+ h2
+ {
+   margin-bottom: 15px;
+   margin-top: 20px;
+   font-weight: bold;
+ }
+
+ div.subtotal
+ {
+   display: flex;
+   flex-direction: row;
+   width:240px;
+   justify-content: space-between;
+ }
+
+ div.subtotal p
+ {
+   margin-top:40px;
+ }
+
+ button.compra
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top:30px;
+  width: 460px;
+  height: 51px;
+  background-color: #1EBB47;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
   font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
 }
 
-div.bot {
-  margin-left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+div.fretecupom
+{
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-top: 40px;
+  flex-direction: column;
+  
+  height: auto;
+}
+
+input.frete
+{
+  width: 240px;
+  height: 45px;
   margin-bottom: 30px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-radius: 10px;
+  border-style: none;
+  outline: none;
+  color: black;
+  font-family: 'Raleway', sans-serif;
+  background-color: #e6e6e6;
+  font-size: 20px;
 }
 
-button.remover {
-  width: 282px;
-  height: 67px;
-  background-color: #88002A;
-  border-radius: 25px;
-  border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
+h3
+{
+  margin-bottom: 14px;
 }
 
-button.finalizar {
-  width: 282px;
-  height: 67px;
-  background-color: #008824;
-  margin-bottom: 20px;
-  border-radius: 25px;
-  border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
+div.input
+{
+  display: flex;
+  flex-direction: row;
+  width: 455px;
+  justify-content: space-between;
 }
+
+button.calcular
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 160px;
+  height: 46px;
+  background-color: #0BBAB3;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
+}
+
+button.adicionar
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top:-25px;
+ 
+  width: 455px;
+  height: 51px;
+  background-color: #0BBAB3;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
+  font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
+}
+
+
+
 /*# sourceMappingURL=carrinho.css.map */
