--- a/Site/css/pedidos.css
+++ b/Site/css/pedidos.css
@@ -1,444 +1,516 @@
 .material-icons.md-30 {
-  font-size: 30px;
+    font-size: 30px;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  body {
+    margin: 0 auto;
+    background-color: #F5F5F5;
+    font-family: Raleway;
+  }
+  
+  h1 {
+    font-size: 52px;
+  }
+  
+  h2 {
+    font-size: 40px;
+  }
+  
+  h3 {
+    font-size: 25px;
+  }
+  
+  h4 {
+    font-size: 20px;
+  }
+  
+  header {
+    position: relative;
+    height: 218px;
+  }
+  
+  nav {
+    margin: 0;
+    margin-top: 10px;
+  }
+  
+  nav a {
+    margin-left: 140px;
+    color: white;
+    font-size: 23px;
+    text-decoration: none;
+    -webkit-transition: .7s;
+    transition: .7s;
+  }
+  
+  nav a:hover {
+    color: #b8b8b8;
+  }
+  
+  nav a:first-of-type {
+    margin-left: 0px;
+  }
+  
+  #caixao {
+    position: absolute;
+    z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    background-color: #0BBAB3;
+    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 140px;
+    border-radius: 0px 0px 20px 20px;
+  }
+  
+  #caixao form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 522px;
+    height: 56px;
+  }
+  
+  #caixao input {
+    margin-left: 53px;
+    width: 100%;
+    height: 100%;
+    border-radius: 28px;
+    border: none;
+    outline: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: #575757;
+    background-color: #E6E6E6;
+    padding-left: 30px;
+  }
+  
+  #caixao input::-webkit-input-placeholder {
+    color: #B8B8B8;
+  }
+  
+  #caixao input:-ms-input-placeholder {
+    color: #B8B8B8;
+  }
+  
+  #caixao input::-ms-input-placeholder {
+    color: #B8B8B8;
+  }
+  
+  #caixao input::placeholder {
+    color: #B8B8B8;
+  }
+  
+  #caixao button {
+    height: 30px;
+    width: 30px;
+    margin: 13px 30px 13px -50px;
+    border: none;
+    background-color: #E6E6E6;
+    padding: 0px;
+  }
+  
+  .conteudoHeader {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 70%;
+  }
+  
+  .linkUsuario, .linkCarrinho {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .linkUsuario img {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+  }
+  
+  .perfilUsuario {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  .perfilUsuario h4 {
+    margin-left: 10px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .perfilUsuario h4 span {
+    font-weight: lighter;
+  }
+  
+  .carrinhoCompras {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    color: #FFF;
+    background-color: #4E2F00;
+  }
+  
+  #caixinha {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #4E2F00;
+    width: 100%;
+    height: 78px;
+    border-radius: 0px 0px 20px 20px;
+    top: 120px;
+  }
+  
+  footer {
+    margin-top: 40px;
+  }
+  
+  div.tudinho {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    background-color: #0BBAB3;
+    border-radius: 20px 20px 0px 0px;
+    height: 130px;
+    padding-top: 40px;
+  }
+  
+  div.tudinho p.dev {
+    font-weight: 600;
+    color: white;
+  }
+  
+  div.tudinho div.textito p.ti {
+    margin: 0;
+    color: white;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  
+  div.tudinho div.textito p {
+    margin: 0;
+    color: white;
+    margin-bottom: 5px;
+  }
+  
+  div.tudinho div.redes p {
+    margin: 0;
+    color: white;
+    font-weight: 600;
+    margin-bottom: 15px;
+    font-size: 20px;
+  }
+  
+  div.tudinho div.app p {
+    margin: 0;
+    color: white;
+    font-weight: 600;
+    margin-bottom: 15px;
+    font-size: 20px;
+  }
+  
+  div.tudinho div.app div.zap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  
+  div.tudinho div.app img.aba {
+    margin-top: -10px;
+    margin-left: -15px;
+  }
+  
+  div.tudinho div.app img.abb {
+    margin-top: 2px;
+    width: 170px;
+    height: 52px;
+  }
+  
+  main {
+    margin: 0 auto;
+    width: 70%;
+  }
+
+div.titulo
+{
+  display:flex;
+  flex-direction: row;
+  width:220px;
+  justify-content: space-between;
+  margin-top: 15px;
 }
 
-a {
-  text-decoration: none;
+div.titulo img
+{
+  width: 35px;
+  height: 40px;
+  margin-top: 4px;
 }
 
-body {
-  margin: 0 auto;
-  background-color: #F5F5F5;
-  font-family: Raleway;
+div.titulo p
+{
+  font-size: 25px;  
+  margin-top: 12px;
+  font-weight: 600;
 }
 
-h1 {
-  font-size: 52px;
-}
-
-h2 {
-  font-size: 40px;
-}
-
-h3 {
+p.emAberto
+{
   font-size: 25px;
+  font-weight: 300;
 }
 
-h4 {
-  font-size: 20px;
+div.pedido
+{
+  display: flex;
+  flex-direction: row;
 }
 
-header {
-  position: relative;
-  height: 218px;
+div.emAberto
+{
+  background-color: white;
+  padding: 25px;
+  border-radius: 13px;
+  display: flex;
+  flex-direction: column;
+  width: 575px;
+  margin-right: 40px;
+  min-height: auto;
 }
 
-nav {
-  margin: 0;
+div.cima
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-nav a {
-  margin-left: 140px;
-  color: white;
-  font-size: 23px;
-  text-decoration: none;
-  -webkit-transition: .7s;
-  transition: .7s;
-}
-
-nav a:hover {
-  color: #b8b8b8;
-}
-
-nav a:first-of-type {
+div.baixo
+{
+  display: flex;
+  flex-direction: row;
   margin-left: 0px;
+  justify-content: space-evenly;
 }
 
-#caixao {
-  position: absolute;
-  z-index: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+img.bolo
+{
+  margin-left:-135px;
+  margin-right: 30px;
+}
+
+p.pedido
+{
+  font-size:27px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+div.aCaminho
+{
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  background-color: #0BBAB3;
-  width: 90%;
-  padding-left: 5%;
-  padding-right: 5%;
-  height: 140px;
-  border-radius: 0px 0px 20px 20px;
+  flex-direction: row;
+  justify-content: space-between;
+  width:150px;
+  margin-top: 4px;
 }
 
-#caixao form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 522px;
-  height: 56px;
-}
-
-#caixao input {
-  margin-left: 53px;
-  width: 100%;
-  height: 100%;
-  border-radius: 28px;
-  border: none;
-  outline: none;
-  font-family: "Raleway", sans-serif;
-  font-size: 24px;
-  font-weight: bold;
-  color: #575757;
-  background-color: #E6E6E6;
-  padding-left: 30px;
-}
-
-#caixao input::-webkit-input-placeholder {
-  color: #B8B8B8;
-}
-
-#caixao input:-ms-input-placeholder {
-  color: #B8B8B8;
-}
-
-#caixao input::-ms-input-placeholder {
-  color: #B8B8B8;
-}
-
-#caixao input::placeholder {
-  color: #B8B8B8;
-}
-
-#caixao button {
+.aCaminho img
+{
+  width:34px;
   height: 30px;
-  width: 30px;
-  margin: 13px 30px 13px -50px;
-  border: none;
-  background-color: #E6E6E6;
-  padding: 0px;
+  margin-top: 10px;
 }
 
-.conteudoHeader {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 70%;
-}
-
-.linkUsuario, .linkCarrinho {
-  color: white;
-  text-decoration: none;
-}
-
-.linkUsuario img {
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-}
-
-.perfilUsuario {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.perfilUsuario h4 {
-  margin-left: 10px;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.perfilUsuario h4 span {
-  font-weight: lighter;
-}
-
-.carrinhoCompras {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 50%;
-  width: 64px;
-  height: 64px;
-  color: #FFF;
-  background-color: #4E2F00;
-}
-
-#caixinha {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #4E2F00;
-  width: 100%;
-  height: 78px;
-  border-radius: 0px 0px 20px 20px;
-  top: 120px;
-}
-
-footer {
-  margin-top: 40px;
-}
-
-div.tudinho {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  background-color: #0BBAB3;
-  border-radius: 20px 20px 0px 0px;
-  height: 130px;
-  padding-top: 40px;
-}
-
-div.tudinho p.dev {
-  font-weight: 600;
-  color: white;
-}
-
-div.tudinho div.textito p.ti {
-  margin: 0;
-  color: white;
-  font-weight: 600;
+.aCaminho p
+{
   font-size: 20px;
-  margin-bottom: 15px;
+  margin-top: 13px;
 }
 
-div.tudinho div.textito p {
-  margin: 0;
-  color: white;
-  margin-bottom: 5px;
-}
-
-div.tudinho div.redes p {
-  margin: 0;
-  color: white;
-  font-weight: 600;
-  margin-bottom: 15px;
-  font-size: 20px;
-}
-
-div.tudinho div.app p {
-  margin: 0;
-  color: white;
-  font-weight: 600;
-  margin-bottom: 15px;
-  font-size: 20px;
-}
-
-div.tudinho div.app div.zap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-div.tudinho div.app img.aba {
-  margin-top: -10px;
-  margin-left: -15px;
-}
-
-div.tudinho div.app img.abb {
-  margin-top: 2px;
-  width: 170px;
-  height: 52px;
-}
-
-button {
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
-}
-
-img.lista {
-  height: 30px;
-  width: 30px;
-}
-
-h5.oi {
-  font-size: 20px;
-  margin-left: 15px;
-}
-
-p.emaberto {
-  margin: 10px 0px 16px 100px;
-}
-
-div.inicio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 100px;
-}
-
-div.pedido {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #e6e6e6;
-  width: 1291px;
-  height: 238px;
-  border-radius: 20px;
-  padding: 20px;
-  margin-left: 100px;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
-}
-
-div.pedido img.bolo {
-  width: 200px;
-  height: 150px;
-  margin-top: 55px;
-  margin-left: -115px;
-}
-
-div.pedido h3.titulo {
-  margin-left: 20px;
-  margin-top: 60px;
-}
-
-div.pedido div.iniciodois {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: -205px;
-}
-
-div.pedido img.caminhao {
-  width: 22px;
-  height: 16px;
-}
-
-div.pedido p.acaminho {
-  margin-left: 5px;
-}
-
-div.pedido h3.preco {
-  margin-left: 500px;
-  margin-top: 110px;
+p.total
+{
   font-size: 30px;
+  font-weight: bold;
+  margin-top: 12px;
+  margin-bottom: 13px;
 }
 
-div.pedido div.botoes {
-  display: -webkit-box;
-  display: -ms-flexbox;
+p.preco
+{
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 17px;
+}
+
+div.dir
+{
+  margin-top: px;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: 50px;
-  margin-top: 40px;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 130px;
 }
 
-div.pedido button.um {
-  width: 282px;
-  height: 67px;
+button.rastreio
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
   background-color: #0BBAB3;
-  margin-bottom: 20px;
-  border-radius: 25px;
-  border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: white;
-  font-size: 20px;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
   font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
 }
 
-div.pedido div.botao {
-  display: -webkit-box;
-  display: -ms-flexbox;
+button.cancela
+{
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 90px;
-}
-
-div.pedido img.rastrear {
-  width: 18px;
-  height: 18px;
-  margin-left: 5px;
-}
-
-div.pedido button.dois {
-  width: 282px;
-  height: 67px;
-  border-radius: 25px;
-  border-style: none;
-  font-family: "Raleway", sans-serif;
-  color: #797979;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
+  background-color: #E6E6E6;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
   font-size: 20px;
+  color:#575757;
+  border-radius: 13px;
+}
+
+p.item
+{
+  margin-left: 20px;
+  margin-top:0;
+  font-size: 30px;
   font-weight: bold;
 }
-/*# sourceMappingURL=pedidos.css.map */
+
+p.boloTitulo
+{
+  margin-bottom:0px;
+  margin-top:30px;
+  font-size:27px;
+  font-weight: bold;
+}
+
+p.boloLegenda
+{
+  margin-top:5px;
+}
+
+p.fino
+{
+  margin-top: 35px;
+  margin-bottom:0px;
+  font-size: 20px;
+}
+
+p.bold
+{
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+button.rastreio img
+{
+  margin-left: 10px;
+}
+
+button.problema
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
+  background-color: #88002A;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
+  font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
+}
+
+
